# paam

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PRODUCT.md  README.md
.dev/docs/: PROCESS.md
.dev/docs/archived/: PRD-v0.1-design-snapshot.md
.dev/docs/decisions/: 0001-tech-stack-choice.md  0002-shared-core-strategy.md  0003-open-source-license.md  0004-config-format-compatibility.md  0005-distribution-channels.md  0006-branding-and-visual-identity.md  0007-phase-extension-design.md  0008-adopt-openspec.md  README.md  template.md
.dev/docs/milestones/: M1-plan.md  M1-retro.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
crates/paam-cli/: Cargo.toml
crates/paam-cli/src/: main.rs
crates/paam-core/: Cargo.toml
crates/paam-core/src/: error.rs  lib.rs  paths.rs  test_support.rs
crates/paam-core/src/asset/: frontmatter.rs  mod.rs  skill.rs
crates/paam-core/src/config/: mod.rs  schema.rs
crates/paam-core/src/discover/: mod.rs
crates/paam-core/src/git/: mod.rs
crates/paam-core/src/install/: mod.rs
crates/paam-core/src/local_repo/: mod.rs
crates/paam-core/src/metadata/: mod.rs
crates/paam-core/src/source/: mod.rs  url.rs
crates/paam-core/src/sync/: mod.rs
openspec/changes/archive/2026-04-28-paam-foundation-track/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-28-swap-git-transport-to-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-29-paam-skill-discovery/: design.md  proposal.md  tasks.md
openspec/specs/asset-management/: spec.md
openspec/specs/installed-assets/: spec.md
openspec/specs/source-management/: spec.md
openspec/specs/target-sync/: spec.md
(+12 files in other folders)
