[package]
name = "paam-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core business logic for paam (Private AI Asset Manager)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
git2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
directories-next = { workspace = true }
